# handwritten-number-generator

./: .gitattributes  .gitignore  LICENSE  README.md  generate-numbers-sequence.py  generate-phone-numbers.py  phonenumbers-handwritten-dataset-200.pickle  setup.cfg
data/: digits-dataset.pickle
number_generator/: __init__.py  core.py  helpers.py
src/number_generator/: functions.py
tests/: test_helpers.py  test_number_generator.py
