[metadata]
name = number-generator
version = 0.0.1
author = Pablo Carneiro Elias
author_email = pablo.cael@gmail.com
description = A handwritten digit sequence generator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
scripts =
    generate-numbers-sequence.py
    generate-phone-numbers.py

python_requires = >=3.6
install_requires =
    numpy >= 1.21.2
    pytest >= 6.2.5
    argparse >= 1.4.0
    Pillow >= 8.3.2

[options.data_files]
data = data/*

[pycodestyle]
count = False
ignore = E226,E302,E41
max-line-length = 120
statistics = True
